--- a/notebooks/experiments/baseline.ipynb
+++ b/notebooks/experiments/baseline.ipynb
@@ -513,8 +513,196 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 209,
    "id": "848648b6-1dc2-4942-b8b4-22cadc224ec2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import StratifiedGroupKFold\n",
+    "\n",
+    "\n",
+    "def add_fold(config, df):\n",
+    "    df[\"fold\"] = -1\n",
+    "    cv = StratifiedGroupKFold(n_splits=5, random_state=0, shuffle=True)\n",
+    "    for i_fold, (tr_idx, va_idx) in enumerate(cv.split(X=df, y=df[\"fold\"], groups=df[\"uid\"])):\n",
+    "        df.loc[va_idx, \"fold\"] = i_fold\n",
+    "\n",
+    "    return df\n",
+    "\n",
+    "\n",
+    "train_df = add_fold(config, train_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 210,
+   "id": "c380d49b-b1dd-4517-9d97-3e96fdbb182f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>uid</th>\n",
+       "      <th>d</th>\n",
+       "      <th>t</th>\n",
+       "      <th>x</th>\n",
+       "      <th>y</th>\n",
+       "      <th>fold</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>17711</td>\n",
+       "      <td>0</td>\n",
+       "      <td>12</td>\n",
+       "      <td>50</td>\n",
+       "      <td>76</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>17711</td>\n",
+       "      <td>0</td>\n",
+       "      <td>13</td>\n",
+       "      <td>41</td>\n",
+       "      <td>87</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>17711</td>\n",
+       "      <td>0</td>\n",
+       "      <td>14</td>\n",
+       "      <td>41</td>\n",
+       "      <td>87</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>17711</td>\n",
+       "      <td>0</td>\n",
+       "      <td>15</td>\n",
+       "      <td>44</td>\n",
+       "      <td>86</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>17711</td>\n",
+       "      <td>0</td>\n",
+       "      <td>16</td>\n",
+       "      <td>42</td>\n",
+       "      <td>88</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>130371</th>\n",
+       "      <td>24408</td>\n",
+       "      <td>74</td>\n",
+       "      <td>30</td>\n",
+       "      <td>999</td>\n",
+       "      <td>999</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>130372</th>\n",
+       "      <td>24408</td>\n",
+       "      <td>74</td>\n",
+       "      <td>31</td>\n",
+       "      <td>999</td>\n",
+       "      <td>999</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>130373</th>\n",
+       "      <td>24408</td>\n",
+       "      <td>74</td>\n",
+       "      <td>32</td>\n",
+       "      <td>999</td>\n",
+       "      <td>999</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>130374</th>\n",
+       "      <td>24408</td>\n",
+       "      <td>74</td>\n",
+       "      <td>33</td>\n",
+       "      <td>999</td>\n",
+       "      <td>999</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>130375</th>\n",
+       "      <td>24408</td>\n",
+       "      <td>74</td>\n",
+       "      <td>43</td>\n",
+       "      <td>999</td>\n",
+       "      <td>999</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>130376 rows × 6 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          uid   d   t    x    y  fold\n",
+       "0       17711   0  12   50   76     3\n",
+       "1       17711   0  13   41   87     3\n",
+       "2       17711   0  14   41   87     3\n",
+       "3       17711   0  15   44   86     3\n",
+       "4       17711   0  16   42   88     3\n",
+       "...       ...  ..  ..  ...  ...   ...\n",
+       "130371  24408  74  30  999  999     0\n",
+       "130372  24408  74  31  999  999     0\n",
+       "130373  24408  74  32  999  999     0\n",
+       "130374  24408  74  33  999  999     0\n",
+       "130375  24408  74  43  999  999     0\n",
+       "\n",
+       "[130376 rows x 6 columns]"
+      ]
+     },
+     "execution_count": 210,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "144643ec-422e-4ba4-9a21-de29c935f965",
    "metadata": {},
    "outputs": [],
    "source": []
