--- a/notebooks/gnn_lstm.ipynb
+++ b/notebooks/gnn_lstm.ipynb
@@ -234,9 +234,103 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "246d02de-81a6-4cf0-a4e9-424641ba3ae9",
+   "metadata": {},
+   "source": [
+    "### Transformer Example"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "id": "4a87b90f-4c8c-4871-85b7-c1fbf646b4de",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([32, 10, 1])\n"
+     ]
+    }
+   ],
+   "source": [
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "\n",
+    "\n",
+    "class CustomTransformerModelV1(nn.Module):\n",
+    "    def __init__(\n",
+    "        self,\n",
+    "        input_size1,\n",
+    "        input_size2,\n",
+    "        d_model,\n",
+    "        output_size,\n",
+    "        nhead=8,\n",
+    "        num_encoder_layers=6,\n",
+    "        num_decoder_layers=6,\n",
+    "    ):\n",
+    "        super().__init__()\n",
+    "        self.embedding_src = nn.Linear(input_size1, d_model)\n",
+    "        self.embedding_tgt = nn.Linear(input_size2, d_model)\n",
+    "        \n",
+    "        self.transformer = nn.Transformer(\n",
+    "            d_model,\n",
+    "            nhead,\n",
+    "            num_encoder_layers,\n",
+    "            num_decoder_layers,\n",
+    "            batch_first=True,\n",
+    "        )\n",
+    "        self.out = nn.Linear(d_model, output_size)\n",
+    "\n",
+    "    def forward(self, batch):\n",
+    "        x_src = self.embedding_src(batch[\"feature_seqs\"])\n",
+    "        x_tgt = self.embedding_tgt(batch[\"auxiliary_seqs\"])\n",
+    "\n",
+    "        src_mask = batch[\"feature_padding_mask\"]\n",
+    "        tgt_mask = batch[\"auxiliary_padding_mask\"]\n",
+    "\n",
+    "        x = self.transformer(\n",
+    "            src=x_src,\n",
+    "            tgt=x_tgt,\n",
+    "            src_key_padding_mask=src_mask,\n",
+    "            tgt_key_padding_mask=tgt_mask,\n",
+    "        )\n",
+    "        x = self.out(x)\n",
+    "\n",
+    "        return x\n",
+    "\n",
+    "\n",
+    "# ハイパーパラメータ\n",
+    "batch_size = 32\n",
+    "input_size1 = 5\n",
+    "input_size2 = 12\n",
+    "d_model = 128\n",
+    "seq_len_src = 20\n",
+    "seq_len_tgt = 10\n",
+    "output_size = 1\n",
+    "nhead = 2\n",
+    "\n",
+    "# モデルのインスタンス化\n",
+    "model = CustomTransformerModelV1(nhead=nhead, input_size1=input_size1, input_size2=input_size2, d_model=d_model, output_size=output_size)\n",
+    "\n",
+    "# 入力データの準備\n",
+    "batch = {\n",
+    "    \"feature_seqs\": torch.randn(batch_size, seq_len_src, input_size1),\n",
+    "    \"auxiliary_seqs\": torch.randn(batch_size, seq_len_tgt, input_size2),\n",
+    "    \"feature_padding_mask\": (torch.randn(batch_size, seq_len_src) > 0.5),  # 仮のマスク\n",
+    "    \"auxiliary_padding_mask\": (torch.randn(batch_size, seq_len_tgt) > 0.5),  # 仮のマスク\n",
+    "}\n",
+    "# モデルの実行\n",
+    "output = model(batch)\n",
+    "print(output.shape)  # [batch_size, seq_len_tgt, output_size] の形になるはず"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "51e1da56-5dae-40b5-9cf5-ddf6c5d3860e",
+   "id": "7aab388e-7454-4599-bd81-8d31fb4dd040",
    "metadata": {},
    "outputs": [],
    "source": []
