--- a/notebooks/memo.ipynb
+++ b/notebooks/memo.ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "id": "46339c9d-8cab-4cf2-9897-352740dd1d58",
    "metadata": {},
    "outputs": [
@@ -184,7 +184,7 @@
        "[26621236 rows x 5 columns]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -195,11 +195,231 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "4c1a37d3-351c-4107-9ffc-5158bc9690cb",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>x</th>\n",
+       "      <th>y</th>\n",
+       "      <th>mesh_id</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1</td>\n",
+       "      <td>5</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>39995</th>\n",
+       "      <td>200</td>\n",
+       "      <td>196</td>\n",
+       "      <td>39995</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>39996</th>\n",
+       "      <td>200</td>\n",
+       "      <td>197</td>\n",
+       "      <td>39996</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>39997</th>\n",
+       "      <td>200</td>\n",
+       "      <td>198</td>\n",
+       "      <td>39997</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>39998</th>\n",
+       "      <td>200</td>\n",
+       "      <td>199</td>\n",
+       "      <td>39998</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>39999</th>\n",
+       "      <td>200</td>\n",
+       "      <td>200</td>\n",
+       "      <td>39999</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>40000 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         x    y  mesh_id\n",
+       "0        1    1        0\n",
+       "1        1    2        1\n",
+       "2        1    3        2\n",
+       "3        1    4        3\n",
+       "4        1    5        4\n",
+       "...    ...  ...      ...\n",
+       "39995  200  196    39995\n",
+       "39996  200  197    39996\n",
+       "39997  200  198    39997\n",
+       "39998  200  199    39998\n",
+       "39999  200  200    39999\n",
+       "\n",
+       "[40000 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x = list(range(1, 201))\n",
+    "y = list(range(1, 201))\n",
+    "pd.DataFrame(\n",
+    "    {\n",
+    "        \"x\": np.repeat(x, len(x)),\n",
+    "        \"y\": np.tile(y, len(y)),\n",
+    "        \"mesh_id\": range(len(x) * len(y)),\n",
+    "    }\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "1dce788d-9398-424b-9375-50b2cbdbd294",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|███████████████████████████████████████████████████████████████████████████████████████████████████| 200/200 [00:00<00:00, 441.01it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[  1 200 201]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "from tqdm import tqdm\n",
+    "\n",
+    "\n",
+    "def get_neighbors(i, j, n):\n",
+    "    directions = [(-1, -1), (-1, 0), (-1, 1), (0, -1), (0, 1), (1, -1), (1, 0), (1, 1)]\n",
+    "    neighbors = []\n",
+    "    for di, dj in directions:\n",
+    "        ni, nj = i + di, j + dj\n",
+    "        if 0 <= ni < n and 0 <= nj < n:\n",
+    "            neighbors.append(nj * n + ni)\n",
+    "    return neighbors\n",
+    "\n",
+    "\n",
+    "def generate_adjacency_matrix(n=200):\n",
+    "    adj_matrix = np.zeros((n * n, n * n), dtype=int)\n",
+    "\n",
+    "    for i in tqdm(range(n)):\n",
+    "        for j in range(n):\n",
+    "            mesh_id = j * n + i\n",
+    "            for neighbor_id in get_neighbors(i, j, n):\n",
+    "                adj_matrix[mesh_id][neighbor_id] = 1\n",
+    "\n",
+    "    return adj_matrix\n",
+    "\n",
+    "\n",
+    "def get_kth_adjacency(adj_matrix, k):\n",
+    "    if k >= 2:\n",
+    "        kth_adj = np.linalg.matrix_power(adj_matrix, k)\n",
+    "        kth_adj[kth_adj > 1] = 1\n",
+    "        return kth_adj\n",
+    "    return adj_matrix\n",
+    "\n",
+    "\n",
+    "# 使用例\n",
+    "n = 200\n",
+    "k = 1\n",
+    "adj_matrix = generate_adjacency_matrix(n)\n",
+    "adj_matrix_kth = get_kth_adjacency(adj_matrix, k)\n",
+    "print(np.nonzero(adj_matrix_kth[0])[0])  # 0番のIDの隣接IDを表示\n",
+    "adj_matrix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "06af0250-3e21-4dc1-83c7-a9651de8b3ce",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[  0   2 200 201 202]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(np.nonzero(adj_matrix_kth[1])[0])  # 0番のIDの隣接IDを表示"
+   ]
   },
   {
    "cell_type": "code",
@@ -898,8 +1118,89 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "7aab388e-7454-4599-bd81-8d31fb4dd040",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "\n",
+    "class SequenceGNN(nn.Module):\n",
+    "    def __init__(self, node_feature_dim, hidden_dim):\n",
+    "        super(SequenceGNN, self).__init__()\n",
+    "\n",
+    "        # Transformation for node features and neighbor node features\n",
+    "        self.node_linear = nn.Linear(node_feature_dim, hidden_dim)\n",
+    "        self.neighbor_linear = nn.Linear(node_feature_dim, hidden_dim)\n",
+    "        self.aggregate_linear = nn.Linear(hidden_dim * 2, node_feature_dim)\n",
+    "\n",
+    "    def forward(self, node_features, neighbor_node_features):\n",
+    "        batch_size, sequence_len, _ = node_features.shape\n",
+    "\n",
+    "        updated_sequences = []\n",
+    "        for t in range(sequence_len):\n",
+    "            node_feature_t = node_features[:, t, :]\n",
+    "            neighbor_node_feature_t = neighbor_node_features[:, t, :, :]\n",
+    "\n",
+    "            # Transform node features\n",
+    "            transformed_node = self.node_linear(node_feature_t)\n",
+    "\n",
+    "            # Aggregate neighbor node features\n",
+    "            transformed_neighbors = self.neighbor_linear(neighbor_node_feature_t)\n",
+    "            aggregated_neighbors = transformed_neighbors.mean(dim=1)  # Mean aggregation\n",
+    "\n",
+    "            # Concatenate transformed node features with aggregated neighbor features\n",
+    "            concatenated = torch.cat([transformed_node, aggregated_neighbors], dim=-1)\n",
+    "\n",
+    "            # Final transformation\n",
+    "            out = self.aggregate_linear(concatenated)\n",
+    "            updated_sequences.append(out)\n",
+    "\n",
+    "        # Stack sequences\n",
+    "        updated_sequences = torch.stack(updated_sequences, dim=1)\n",
+    "\n",
+    "        return updated_sequences\n",
+    "\n",
+    "# Example\n",
+    "batch_size = 32\n",
+    "sequence_len = 10\n",
+    "node_feature_dim = 64\n",
+    "hidden_dim = 128\n",
+    "neighbor_node_num = 5\n",
+    "\n",
+    "node_features = torch.rand((batch_size, sequence_len, node_feature_dim))\n",
+    "neighbor_node_features = torch.rand((batch_size, sequence_len, neighbor_node_num, node_feature_dim))\n",
+    "\n",
+    "gnn = SequenceGNN(node_feature_dim, hidden_dim)\n",
+    "updated_node_features = gnn(node_features, neighbor_node_features)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "5149396d-c654-4ff4-a442-9da7813d2f1f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([32, 10, 64])"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "updated_node_features.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8238dfca-ef92-4aff-9068-6a1b11a54b9b",
    "metadata": {},
    "outputs": [],
    "source": []
