--- a/notebooks/memo.ipynb
+++ b/notebooks/memo.ipynb
@@ -1126,6 +1126,7 @@
     "import torch\n",
     "import torch.nn as nn\n",
     "\n",
+    "\n",
     "class SequenceGNN(nn.Module):\n",
     "    def __init__(self, node_feature_dim, hidden_dim):\n",
     "        super(SequenceGNN, self).__init__()\n",
@@ -1162,6 +1163,7 @@
     "\n",
     "        return updated_sequences\n",
     "\n",
+    "\n",
     "# Example\n",
     "batch_size = 32\n",
     "sequence_len = 10\n",
@@ -1170,10 +1172,12 @@
     "neighbor_node_num = 5\n",
     "\n",
     "node_features = torch.rand((batch_size, sequence_len, node_feature_dim))\n",
-    "neighbor_node_features = torch.rand((batch_size, sequence_len, neighbor_node_num, node_feature_dim))\n",
+    "neighbor_node_features = torch.rand(\n",
+    "    (batch_size, sequence_len, neighbor_node_num, node_feature_dim)\n",
+    ")\n",
     "\n",
     "gnn = SequenceGNN(node_feature_dim, hidden_dim)\n",
-    "updated_node_features = gnn(node_features, neighbor_node_features)\n"
+    "updated_node_features = gnn(node_features, neighbor_node_features)"
    ]
   },
   {
@@ -1199,8 +1203,98 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "id": "8238dfca-ef92-4aff-9068-6a1b11a54b9b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([32, 10, 128])"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "\n",
+    "\n",
+    "class GRUGNN(nn.Module):\n",
+    "    def __init__(self, node_feature_dim, hidden_dim):\n",
+    "        super(GRUGNN, self).__init__()\n",
+    "\n",
+    "        # Update gate\n",
+    "        self.update_gate = nn.Sequential(\n",
+    "            nn.Linear(node_feature_dim + hidden_dim, hidden_dim), nn.Sigmoid()\n",
+    "        )\n",
+    "\n",
+    "        # Reset gate\n",
+    "        self.reset_gate = nn.Sequential(\n",
+    "            nn.Linear(node_feature_dim + hidden_dim, hidden_dim), nn.Sigmoid()\n",
+    "        )\n",
+    "\n",
+    "        # Transform\n",
+    "        self.transform = nn.Linear(node_feature_dim + hidden_dim, hidden_dim)\n",
+    "\n",
+    "    def forward(self, node_features, neighbor_node_features):\n",
+    "        batch_size, sequence_len, _ = node_features.shape\n",
+    "        hidden_state = torch.zeros((batch_size, hidden_dim)).to(\n",
+    "            node_features.device\n",
+    "        )  # Initial hidden state\n",
+    "\n",
+    "        all_hidden_states = []\n",
+    "\n",
+    "        for t in range(sequence_len):\n",
+    "            node_feature_t = node_features[:, t, :]\n",
+    "            neighbor_node_feature_t = neighbor_node_features[:, t, :, :].mean(\n",
+    "                dim=1\n",
+    "            )  # Mean aggregation\n",
+    "\n",
+    "            combined_node_feature = torch.cat([node_feature_t, hidden_state], dim=-1)\n",
+    "\n",
+    "            z = self.update_gate(combined_node_feature)\n",
+    "            r = self.reset_gate(combined_node_feature)\n",
+    "\n",
+    "            combined_transform_input = torch.cat(\n",
+    "                [node_feature_t, r * hidden_state], dim=-1\n",
+    "            )\n",
+    "            h_tilda = torch.tanh(self.transform(combined_transform_input))\n",
+    "\n",
+    "            hidden_state = (1 - z) * hidden_state + z * h_tilda\n",
+    "\n",
+    "            all_hidden_states.append(hidden_state)\n",
+    "\n",
+    "        # Stack sequences\n",
+    "        all_hidden_states = torch.stack(all_hidden_states, dim=1)\n",
+    "\n",
+    "        return all_hidden_states\n",
+    "\n",
+    "\n",
+    "# Example\n",
+    "batch_size = 32\n",
+    "sequence_len = 10\n",
+    "node_feature_dim = 64\n",
+    "hidden_dim = 128\n",
+    "neighbor_node_num = 5\n",
+    "\n",
+    "node_features = torch.rand((batch_size, sequence_len, node_feature_dim))\n",
+    "neighbor_node_features = torch.rand(\n",
+    "    (batch_size, sequence_len, neighbor_node_num, node_feature_dim)\n",
+    ")\n",
+    "\n",
+    "gnn = GRUGNN(node_feature_dim, hidden_dim)\n",
+    "updated_node_features = gnn(node_features, neighbor_node_features)\n",
+    "updated_node_features.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f7f4a5a3-71ca-4115-8319-db51cfe0bf8c",
    "metadata": {},
    "outputs": [],
    "source": []
