--- a/notebooks/memo.ipynb
+++ b/notebooks/memo.ipynb
@@ -332,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 162,
    "id": "3f8dae33-d868-448d-9a46-215891b422ef",
    "metadata": {},
    "outputs": [
@@ -340,7 +340,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████████████████████████████████████████████████████████████████████████████████████████| 40000/40000 [00:07<00:00, 5592.23it/s]\n"
+      "100%|██████████████████████████████████████████████████████████████████████████████████████████████| 40000/40000 [00:06<00:00, 5805.01it/s]\n"
      ]
     },
     {
@@ -470,7 +470,7 @@
        "[40000 rows x 4 columns]"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 162,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -486,13 +486,13 @@
     "mesh_map_df[\"neighbor_mesh_ids\"] = mesh_map_df[\"mesh_id\"].progress_apply(\n",
     "    lambda m: get_neighbor_mesh_id(m, adj_matrix)\n",
     ")\n",
-    "df = task_df.head(50000).copy()\n",
+    "df = task_df.head(100000).copy()\n",
     "mesh_map_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 163,
    "id": "b79e41bd-972a-4558-8add-1ef798190fcd",
    "metadata": {},
    "outputs": [
@@ -588,73 +588,73 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>49995</th>\n",
-       "      <td>16522</td>\n",
-       "      <td>27</td>\n",
-       "      <td>12</td>\n",
-       "      <td>77</td>\n",
-       "      <td>112</td>\n",
-       "      <td>15311</td>\n",
-       "      <td>[15110, 15111, 15112, 15310, 15312, 15510, 155...</td>\n",
+       "      <th>99995</th>\n",
+       "      <td>18618</td>\n",
+       "      <td>5</td>\n",
+       "      <td>14</td>\n",
+       "      <td>135</td>\n",
+       "      <td>98</td>\n",
+       "      <td>26897</td>\n",
+       "      <td>[26696, 26697, 26698, 26896, 26898, 27096, 270...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>49996</th>\n",
-       "      <td>16522</td>\n",
-       "      <td>27</td>\n",
+       "      <th>99996</th>\n",
+       "      <td>18618</td>\n",
+       "      <td>5</td>\n",
        "      <td>15</td>\n",
-       "      <td>82</td>\n",
-       "      <td>113</td>\n",
-       "      <td>16312</td>\n",
-       "      <td>[16111, 16112, 16113, 16311, 16313, 16511, 165...</td>\n",
+       "      <td>139</td>\n",
+       "      <td>88</td>\n",
+       "      <td>27687</td>\n",
+       "      <td>[27486, 27487, 27488, 27686, 27688, 27886, 278...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>49997</th>\n",
-       "      <td>16522</td>\n",
-       "      <td>27</td>\n",
-       "      <td>34</td>\n",
-       "      <td>84</td>\n",
-       "      <td>113</td>\n",
-       "      <td>16712</td>\n",
-       "      <td>[16511, 16512, 16513, 16711, 16713, 16911, 169...</td>\n",
+       "      <th>99997</th>\n",
+       "      <td>18618</td>\n",
+       "      <td>5</td>\n",
+       "      <td>17</td>\n",
+       "      <td>141</td>\n",
+       "      <td>86</td>\n",
+       "      <td>28085</td>\n",
+       "      <td>[27884, 27885, 27886, 28084, 28086, 28284, 282...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>49998</th>\n",
-       "      <td>16522</td>\n",
-       "      <td>27</td>\n",
-       "      <td>35</td>\n",
-       "      <td>77</td>\n",
-       "      <td>112</td>\n",
-       "      <td>15311</td>\n",
-       "      <td>[15110, 15111, 15112, 15310, 15312, 15510, 155...</td>\n",
+       "      <th>99998</th>\n",
+       "      <td>18618</td>\n",
+       "      <td>5</td>\n",
+       "      <td>21</td>\n",
+       "      <td>141</td>\n",
+       "      <td>86</td>\n",
+       "      <td>28085</td>\n",
+       "      <td>[27884, 27885, 27886, 28084, 28086, 28284, 282...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>49999</th>\n",
-       "      <td>16522</td>\n",
-       "      <td>27</td>\n",
-       "      <td>36</td>\n",
-       "      <td>77</td>\n",
-       "      <td>113</td>\n",
-       "      <td>15312</td>\n",
-       "      <td>[15111, 15112, 15113, 15311, 15313, 15511, 155...</td>\n",
+       "      <th>99999</th>\n",
+       "      <td>18618</td>\n",
+       "      <td>5</td>\n",
+       "      <td>22</td>\n",
+       "      <td>140</td>\n",
+       "      <td>86</td>\n",
+       "      <td>27885</td>\n",
+       "      <td>[27684, 27685, 27686, 27884, 27886, 28084, 280...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>50000 rows × 7 columns</p>\n",
+       "<p>100000 rows × 7 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "         uid   d   t    x    y  mesh_id  \\\n",
-       "0       2381   0  15  158   99    31498   \n",
-       "1       2381   0  16  167   90    33289   \n",
-       "2       2381   0  19  167   88    33287   \n",
-       "3       2381   0  20  167   88    33287   \n",
-       "4       2381   0  23  168   88    33487   \n",
-       "...      ...  ..  ..  ...  ...      ...   \n",
-       "49995  16522  27  12   77  112    15311   \n",
-       "49996  16522  27  15   82  113    16312   \n",
-       "49997  16522  27  34   84  113    16712   \n",
-       "49998  16522  27  35   77  112    15311   \n",
-       "49999  16522  27  36   77  113    15312   \n",
+       "         uid  d   t    x   y  mesh_id  \\\n",
+       "0       2381  0  15  158  99    31498   \n",
+       "1       2381  0  16  167  90    33289   \n",
+       "2       2381  0  19  167  88    33287   \n",
+       "3       2381  0  20  167  88    33287   \n",
+       "4       2381  0  23  168  88    33487   \n",
+       "...      ... ..  ..  ...  ..      ...   \n",
+       "99995  18618  5  14  135  98    26897   \n",
+       "99996  18618  5  15  139  88    27687   \n",
+       "99997  18618  5  17  141  86    28085   \n",
+       "99998  18618  5  21  141  86    28085   \n",
+       "99999  18618  5  22  140  86    27885   \n",
        "\n",
        "                                       neighbor_mesh_ids  \n",
        "0      [31297, 31298, 31299, 31497, 31499, 31697, 316...  \n",
@@ -663,16 +663,16 @@
        "3      [33086, 33087, 33088, 33286, 33288, 33486, 334...  \n",
        "4      [33286, 33287, 33288, 33486, 33488, 33686, 336...  \n",
        "...                                                  ...  \n",
-       "49995  [15110, 15111, 15112, 15310, 15312, 15510, 155...  \n",
-       "49996  [16111, 16112, 16113, 16311, 16313, 16511, 165...  \n",
-       "49997  [16511, 16512, 16513, 16711, 16713, 16911, 169...  \n",
-       "49998  [15110, 15111, 15112, 15310, 15312, 15510, 155...  \n",
-       "49999  [15111, 15112, 15113, 15311, 15313, 15511, 155...  \n",
+       "99995  [26696, 26697, 26698, 26896, 26898, 27096, 270...  \n",
+       "99996  [27486, 27487, 27488, 27686, 27688, 27886, 278...  \n",
+       "99997  [27884, 27885, 27886, 28084, 28086, 28284, 282...  \n",
+       "99998  [27884, 27885, 27886, 28084, 28086, 28284, 282...  \n",
+       "99999  [27684, 27685, 27686, 27884, 27886, 28084, 280...  \n",
        "\n",
-       "[50000 rows x 7 columns]"
+       "[100000 rows x 7 columns]"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 163,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -684,7 +684,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 164,
    "id": "1c19d6e5-16cb-490c-8ae5-ab9a0085b5f9",
    "metadata": {},
    "outputs": [],
@@ -705,31 +705,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 165,
    "id": "bf10a3b8-04a4-4bac-a66b-a348bf3ce84d",
    "metadata": {},
    "outputs": [],
    "source": [
     "grouped = merged_df.groupby(\"uid\", sort=False)\n",
     "sequences = [\n",
-    "    node_feature[np.array(group[\"neighbor_mesh_ids\"].tolist(), dtype=np.int32)]\n",
+    "    torch.tensor(\n",
+    "        node_feature[np.array(group[\"neighbor_mesh_ids\"].tolist(), dtype=np.int32)]\n",
+    "    )\n",
     "    for _, group in grouped\n",
     "]  # list[(sequence_len, neighbor_node_num, node_feature)]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 166,
+   "id": "e0851570-1afc-40e2-9be0-06abaec3952c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "167"
+      ]
+     },
+     "execution_count": 166,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(sequences)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 167,
    "id": "6d748b23-e604-47de-8b54-29ee8ca30008",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(571, 8, 85)"
+       "torch.Size([571, 8, 85])"
       ]
      },
-     "execution_count": 141,
+     "execution_count": 167,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -741,19 +764,129 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 168,
    "id": "c54a5882-e028-4d14-8526-f6c2e9efe8cb",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([167, 621, 8, 85])"
+      ]
+     },
+     "execution_count": 168,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from torch.nn.utils.rnn import pad_sequence\n",
+    "\n",
+    "\n",
+    "def pad_3d_sequences(sequences, padding_value=0.0):\n",
+    "    # 各シーケンスの長さを取得\n",
+    "    seq_lengths = [seq.size(0) for seq in sequences]\n",
+    "\n",
+    "    # 全体の最大のsequence_lenを取得\n",
+    "    max_seq_len = max(seq_lengths)\n",
+    "\n",
+    "    # パディング後のテンソルのサイズを取得\n",
+    "    batch_size, num_neighbor_node, feature_dim = (\n",
+    "        len(sequences),\n",
+    "        sequences[0].size(1),\n",
+    "        sequences[0].size(2),\n",
+    "    )\n",
+    "\n",
+    "    # ゼロのテンソルを事前に作成\n",
+    "    padded_tensor = torch.full(\n",
+    "        (batch_size, max_seq_len, num_neighbor_node, feature_dim), padding_value\n",
+    "    )\n",
+    "\n",
+    "    # 各シーケンスをゼロのテンソルにコピー\n",
+    "    for i, seq in enumerate(sequences):\n",
+    "        padded_tensor[i, : seq_lengths[i]] = seq\n",
+    "\n",
+    "    return padded_tensor\n",
+    "\n",
+    "\n",
+    "padding_value = -1\n",
+    "neighbor_node_seqs = sequences[:200]\n",
+    "feature_seqs_padded = pad_3d_sequences(\n",
+    "    [(seq) for seq in neighbor_node_seqs],\n",
+    "    padding_value=padding_value,\n",
+    ")  # (sequence_len, feature_dim)\n",
+    "\n",
+    "feature_seqs_padded.shape"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 156,
    "id": "47513cc8-4205-48cb-a709-686414d9ffc1",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[[ 0,  0,  0,  ...,  0,  0,  0],\n",
+       "         [ 0,  0,  0,  ...,  0,  0,  0],\n",
+       "         [ 0,  0,  0,  ...,  0,  0,  0],\n",
+       "         ...,\n",
+       "         [ 0,  0,  0,  ...,  0,  0,  0],\n",
+       "         [ 0,  0,  0,  ...,  0,  0,  1],\n",
+       "         [ 0,  0,  0,  ...,  0,  0,  0]],\n",
+       "\n",
+       "        [[ 0,  0,  0,  ...,  0,  0,  0],\n",
+       "         [ 1,  0,  0,  ...,  0,  0,  0],\n",
+       "         [ 0,  0,  0,  ...,  0,  0,  0],\n",
+       "         ...,\n",
+       "         [ 0,  0,  0,  ...,  0,  0,  0],\n",
+       "         [ 0,  0,  0,  ...,  0,  0,  0],\n",
+       "         [ 0,  0,  0,  ...,  0,  0,  0]],\n",
+       "\n",
+       "        [[ 0,  0,  0,  ...,  0,  0,  0],\n",
+       "         [ 0,  0,  0,  ...,  0,  0,  0],\n",
+       "         [ 0,  0,  0,  ...,  0,  0,  0],\n",
+       "         ...,\n",
+       "         [ 0,  0,  0,  ...,  0,  0,  0],\n",
+       "         [ 0,  0,  0,  ...,  0,  0,  0],\n",
+       "         [ 0,  0,  0,  ...,  0,  1,  0]],\n",
+       "\n",
+       "        ...,\n",
+       "\n",
+       "        [[-1, -1, -1,  ..., -1, -1, -1],\n",
+       "         [-1, -1, -1,  ..., -1, -1, -1],\n",
+       "         [-1, -1, -1,  ..., -1, -1, -1],\n",
+       "         ...,\n",
+       "         [-1, -1, -1,  ..., -1, -1, -1],\n",
+       "         [-1, -1, -1,  ..., -1, -1, -1],\n",
+       "         [-1, -1, -1,  ..., -1, -1, -1]],\n",
+       "\n",
+       "        [[-1, -1, -1,  ..., -1, -1, -1],\n",
+       "         [-1, -1, -1,  ..., -1, -1, -1],\n",
+       "         [-1, -1, -1,  ..., -1, -1, -1],\n",
+       "         ...,\n",
+       "         [-1, -1, -1,  ..., -1, -1, -1],\n",
+       "         [-1, -1, -1,  ..., -1, -1, -1],\n",
+       "         [-1, -1, -1,  ..., -1, -1, -1]],\n",
+       "\n",
+       "        [[-1, -1, -1,  ..., -1, -1, -1],\n",
+       "         [-1, -1, -1,  ..., -1, -1, -1],\n",
+       "         [-1, -1, -1,  ..., -1, -1, -1],\n",
+       "         ...,\n",
+       "         [-1, -1, -1,  ..., -1, -1, -1],\n",
+       "         [-1, -1, -1,  ..., -1, -1, -1],\n",
+       "         [-1, -1, -1,  ..., -1, -1, -1]]])"
+      ]
+     },
+     "execution_count": 156,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "feature_seqs_padded[1]"
+   ]
   },
   {
    "cell_type": "code",
