--- a/notebooks/simple_prediction.ipynb
+++ b/notebooks/simple_prediction.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "35c795e3-d655-4ea0-b953-015149be1655",
    "metadata": {},
    "outputs": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "db23febd-4fc8-4689-94f1-f034d706e18f",
    "metadata": {},
    "outputs": [
@@ -38,7 +38,7 @@
        "(26621236, 5)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -51,13 +51,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 3,
    "id": "6693f672-5139-4f81-bfee-133cd9ce6b19",
    "metadata": {},
    "outputs": [],
    "source": [
     "train_df = task_df.query(\"d < 60\").reset_index(drop=True)\n",
     "test_df = task_df.query(\"d >= 60\").reset_index(drop=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "667979f1-c232-4743-8700-f3880851702f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "d\n",
+       "3    3454199\n",
+       "2    3398291\n",
+       "1    3196665\n",
+       "5    3143463\n",
+       "4    3085894\n",
+       "0    2763652\n",
+       "6    2658382\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(train_df[\"d\"] %7).value_counts()"
    ]
   },
   {
