--- a/notebooks/simple_prediction.ipynb
+++ b/notebooks/simple_prediction.ipynb
@@ -62,31 +62,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "id": "667979f1-c232-4743-8700-f3880851702f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "d\n",
-       "3    3454199\n",
-       "2    3398291\n",
-       "1    3196665\n",
-       "5    3143463\n",
-       "4    3085894\n",
-       "0    2763652\n",
-       "6    2658382\n",
-       "Name: count, dtype: int64"
+       "0           0\n",
+       "1           0\n",
+       "2           0\n",
+       "3           0\n",
+       "4           0\n",
+       "           ..\n",
+       "26621231    1\n",
+       "26621232    1\n",
+       "26621233    1\n",
+       "26621234    1\n",
+       "26621235    1\n",
+       "Name: t, Length: 26621236, dtype: int64"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "(train_df[\"d\"] %7).value_counts()"
+    "morning = {k:0 for k in list(range(12, 36))}\n",
+    "midnight = {k:1 for k in list(range(36, 48)) +list(range(0, 12))}\n",
+    "t_label_mapping = {**morning, **midnight}\n",
+    "task_df[\"t\"].map(t_label_mapping)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "024bbadd-15df-4f0c-8592-51e3da478ce1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{36: 1,\n",
+       " 37: 1,\n",
+       " 38: 1,\n",
+       " 39: 1,\n",
+       " 40: 1,\n",
+       " 41: 1,\n",
+       " 42: 1,\n",
+       " 43: 1,\n",
+       " 44: 1,\n",
+       " 45: 1,\n",
+       " 46: 1,\n",
+       " 47: 1,\n",
+       " 0: 1,\n",
+       " 1: 1,\n",
+       " 2: 1,\n",
+       " 3: 1,\n",
+       " 4: 1,\n",
+       " 5: 1,\n",
+       " 6: 1,\n",
+       " 7: 1,\n",
+       " 8: 1,\n",
+       " 9: 1,\n",
+       " 10: 1,\n",
+       " 11: 1}"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "midnight"
    ]
   },
   {
